--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,26 +1,25 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: pixel-kraft # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
+  - name: Webserver Verwaltung
+    url: https://server.pixel-kraft.de/
+  - name: Webserver Websites
+    url: https://pixel-kraft.de/
+  - name: E-Mail
+    url: wp1118605.mail.server-he.de
+    port: 993
     check: "tcp-ping"
-    ipv6: true
+  - name: Telefon
+    url: xkraftx-dyndns.org
+    port: 6060
+    check: "tcp-ping"
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.pixel-kraft.de
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
