Fix issue forms

--- a/.github/ISSUE_TEMPLATE/incident.yml
+++ b/.github/ISSUE_TEMPLATE/incident.yml
@@ -2,18 +2,22 @@ name: Vorfall
 description: Einen neuen Vorfallbericht erstellen
 labels: [ "status" ]
 body:
+  - type: markdown
+    attributes:
+      value: |
+        Füge weitere Details hinzu
   - type: input
     id: start
     attributes:
       label: Beginn des Vorfalls
-      placeholder: 2021-08-24T13:00:00.220Z
+      placeholder: "2021-08-24T13:00:00.220Z"
     validations:
       required: true
   - type: input
     id: end
     attributes:
       label: Ende des Vorfalls
-      placeholder: 2021-08-24T13:00:00.220Z
+      placeholder: "2021-08-24T13:00:00.220Z"
     validations:
       required: false
   - type: dropdown
